--- a/WingMate_iOS/Storyboards/Base.lproj/Main.storyboard
+++ b/WingMate_iOS/Storyboards/Base.lproj/Main.storyboard
@@ -9,6 +9,14 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Baloo2-Bold.ttf">
+            <string>Baloo2-Bold</string>
+        </array>
+        <array key="OpenSans-Bold.ttf">
+            <string>OpenSans-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--SearchVC-->
         <scene sceneID="GWp-vu-rdt">
@@ -65,18 +73,18 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B4I-Cm-EUH">
-                                <rect key="frame" x="107.33333333333333" y="274" width="199.66666666666669" height="212"/>
+                                <rect key="frame" x="101.66666666666669" y="273.66666666666669" width="211" height="212.66666666666669"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_results" translatesAutoresizingMaskIntoConstraints="NO" id="LZP-2N-NKK">
-                                        <rect key="frame" x="0.0" y="0.0" width="199.66666666666666" height="184"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="211" height="184"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qJ6-A2-Qim">
-                                        <rect key="frame" x="0.0" y="184" width="199.66666666666666" height="28"/>
+                                        <rect key="frame" x="0.0" y="184" width="211" height="28.666666666666657"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Hmmm, We’re not getting any result.  Our bad try another search">
                                                 <attributes>
                                                     <color key="NSColor" name="LabelBlueTextColor"/>
-                                                    <font key="NSFont" size="12" name="OpenSans-Regular"/>
+                                                    <font key="NSFont" metaFont="cellTitle"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -189,7 +197,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Fans" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YFE-pg-BhU">
-                                <rect key="frame" x="20" y="156" width="115" height="35"/>
+                                <rect key="frame" x="20.000000000000007" y="156" width="114.66666666666669" height="35"/>
                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -406,26 +414,19 @@
                                     <constraint firstAttribute="trailing" secondItem="dM4-2k-4f7" secondAttribute="trailing" id="zYa-ci-ROo"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-heart" translatesAutoresizingMaskIntoConstraints="NO" id="HLS-HV-FKu">
-                                <rect key="frame" x="20" y="64" width="72" height="72"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="72" id="GwC-pW-pmw"/>
-                                    <constraint firstAttribute="height" constant="72" id="nsr-Kd-pID"/>
-                                </constraints>
-                            </imageView>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zGi-ew-P7s">
-                                <rect key="frame" x="107.33333333333333" y="344.33333333333331" width="199.66666666666669" height="211.99999999999994"/>
+                                <rect key="frame" x="101.66666666666669" y="344" width="211" height="212.66666666666663"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_results" translatesAutoresizingMaskIntoConstraints="NO" id="yFj-by-IdX">
-                                        <rect key="frame" x="0.0" y="0.0" width="199.66666666666666" height="184"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="211" height="184"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FxZ-7G-leL">
-                                        <rect key="frame" x="0.0" y="184.00000000000006" width="199.66666666666666" height="28"/>
+                                        <rect key="frame" x="0.0" y="184" width="211" height="28.666666666666657"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Hmmm, We’re not getting any result.  Our bad try another search">
                                                 <attributes>
                                                     <color key="NSColor" name="LabelBlueTextColor"/>
-                                                    <font key="NSFont" size="12" name="OpenSans-Regular"/>
+                                                    <font key="NSFont" metaFont="cellTitle"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -444,6 +445,13 @@
                                     <constraint firstItem="yFj-by-IdX" firstAttribute="leading" secondItem="zGi-ew-P7s" secondAttribute="leading" id="v56-oT-Mmo"/>
                                 </constraints>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-heart" translatesAutoresizingMaskIntoConstraints="NO" id="HLS-HV-FKu">
+                                <rect key="frame" x="20" y="64" width="72" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="72" id="GwC-pW-pmw"/>
+                                    <constraint firstAttribute="height" constant="72" id="nsr-Kd-pID"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="5Vs-nU-UbF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -501,7 +509,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Messages" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PZ8-zy-37t">
-                                <rect key="frame" x="20" y="156" width="137" height="35"/>
+                                <rect key="frame" x="20" y="156" width="133" height="47.333333333333343"/>
                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -632,7 +640,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pyl-Mj-ZEv">
-                                <rect key="frame" x="20" y="156" width="111" height="35"/>
+                                <rect key="frame" x="19.999999999999993" y="156" width="110.33333333333331" height="35"/>
                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
