--- a/WingMate_iOS/View Controllers/Search/Cells/SearchUserCollectionViewCell.xib
+++ b/WingMate_iOS/View Controllers/Search/Cells/SearchUserCollectionViewCell.xib
@@ -9,6 +9,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="OpenSans-Bold.ttf">
+            <string>OpenSans-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -22,18 +27,37 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gih-Xt-SQT">
                         <rect key="frame" x="8" y="0.0" width="182" height="165"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="man" translatesAutoresizingMaskIntoConstraints="NO" id="1XX-wg-Llo">
-                                <rect key="frame" x="0.0" y="0.0" width="182" height="128"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dVf-6y-WCl">
+                                <rect key="frame" x="0.0" y="0.0" width="182" height="110"/>
+                                <color key="backgroundColor" name="RedThemeColor"/>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1XX-wg-Llo">
+                                <rect key="frame" x="8" y="8" width="166" height="120"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b3i-Fj-G05">
-                                <rect key="frame" x="0.0" y="0.0" width="182" height="128"/>
+                                <rect key="frame" x="8" y="8" width="166" height="120"/>
                                 <color key="backgroundColor" red="0.066666666666666666" green="0.16078431372549018" blue="0.30980392156862746" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" translatesAutoresizingMaskIntoConstraints="NO" id="LVm-Y6-yOQ">
                                 <rect key="frame" x="150.5" y="10" width="21.5" height="21.5"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="16"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name, age" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSb-Hx-7Ia">
-                                <rect key="frame" x="8" y="101" width="166" height="19"/>
+                                <rect key="frame" x="16" y="101" width="150" height="19"/>
                                 <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -68,7 +92,7 @@
                                     <constraint firstItem="I0O-kO-pMJ" firstAttribute="centerY" secondItem="UgY-K4-5n8" secondAttribute="centerY" id="pJw-h6-juu"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ghe-WW-AUa">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ghe-WW-AUa">
                                 <rect key="frame" x="0.0" y="128" width="182" height="1"/>
                                 <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                 <constraints>
@@ -79,24 +103,28 @@
                         <color key="backgroundColor" name="TextFieldBgColor"/>
                         <constraints>
                             <constraint firstItem="b3i-Fj-G05" firstAttribute="top" secondItem="1XX-wg-Llo" secondAttribute="top" id="3zb-vc-EwU"/>
-                            <constraint firstAttribute="trailing" secondItem="LSb-Hx-7Ia" secondAttribute="trailing" constant="8" id="5T8-cP-Pgk"/>
+                            <constraint firstAttribute="trailing" secondItem="LSb-Hx-7Ia" secondAttribute="trailing" constant="16" id="5T8-cP-Pgk"/>
                             <constraint firstItem="UgY-K4-5n8" firstAttribute="top" secondItem="Ghe-WW-AUa" secondAttribute="bottom" id="6GU-aF-vcT"/>
                             <constraint firstItem="b3i-Fj-G05" firstAttribute="leading" secondItem="1XX-wg-Llo" secondAttribute="leading" id="BFy-11-pnQ"/>
+                            <constraint firstItem="dVf-6y-WCl" firstAttribute="top" secondItem="gih-Xt-SQT" secondAttribute="top" id="Bww-eZ-6dv"/>
                             <constraint firstItem="Ghe-WW-AUa" firstAttribute="leading" secondItem="gih-Xt-SQT" secondAttribute="leading" id="Hn1-A0-drR"/>
                             <constraint firstAttribute="trailing" secondItem="LVm-Y6-yOQ" secondAttribute="trailing" constant="10" id="MLq-NU-aOU"/>
                             <constraint firstItem="UgY-K4-5n8" firstAttribute="leading" secondItem="gih-Xt-SQT" secondAttribute="leading" id="MXN-Ze-VNT"/>
-                            <constraint firstItem="1XX-wg-Llo" firstAttribute="leading" secondItem="gih-Xt-SQT" secondAttribute="leading" id="Y9R-Jw-b4N"/>
+                            <constraint firstItem="dVf-6y-WCl" firstAttribute="leading" secondItem="gih-Xt-SQT" secondAttribute="leading" id="Oz1-ty-KnH"/>
+                            <constraint firstItem="1XX-wg-Llo" firstAttribute="leading" secondItem="gih-Xt-SQT" secondAttribute="leading" constant="8" id="Y9R-Jw-b4N"/>
                             <constraint firstItem="LVm-Y6-yOQ" firstAttribute="top" secondItem="gih-Xt-SQT" secondAttribute="top" constant="10" id="Zhi-nr-IaA"/>
                             <constraint firstItem="b3i-Fj-G05" firstAttribute="trailing" secondItem="1XX-wg-Llo" secondAttribute="trailing" id="a8u-i5-syb"/>
+                            <constraint firstAttribute="trailing" secondItem="dVf-6y-WCl" secondAttribute="trailing" id="dqL-cP-nNC"/>
                             <constraint firstAttribute="trailing" secondItem="Ghe-WW-AUa" secondAttribute="trailing" id="gRr-iD-Flm"/>
-                            <constraint firstAttribute="trailing" secondItem="1XX-wg-Llo" secondAttribute="trailing" id="hOq-cM-zVS"/>
-                            <constraint firstItem="LSb-Hx-7Ia" firstAttribute="leading" secondItem="gih-Xt-SQT" secondAttribute="leading" constant="8" id="j10-hW-ZV8"/>
-                            <constraint firstItem="1XX-wg-Llo" firstAttribute="top" secondItem="gih-Xt-SQT" secondAttribute="top" id="kDS-xB-8bL"/>
+                            <constraint firstAttribute="trailing" secondItem="1XX-wg-Llo" secondAttribute="trailing" constant="8" id="hOq-cM-zVS"/>
+                            <constraint firstItem="LSb-Hx-7Ia" firstAttribute="leading" secondItem="gih-Xt-SQT" secondAttribute="leading" constant="16" id="j10-hW-ZV8"/>
+                            <constraint firstItem="1XX-wg-Llo" firstAttribute="top" secondItem="gih-Xt-SQT" secondAttribute="top" constant="8" id="kDS-xB-8bL"/>
                             <constraint firstItem="b3i-Fj-G05" firstAttribute="bottom" secondItem="1XX-wg-Llo" secondAttribute="bottom" id="mqd-Zu-hC2"/>
                             <constraint firstAttribute="bottom" secondItem="UgY-K4-5n8" secondAttribute="bottom" id="taf-7a-ZPE"/>
                             <constraint firstItem="Ghe-WW-AUa" firstAttribute="top" secondItem="1XX-wg-Llo" secondAttribute="bottom" id="tnb-8b-fny"/>
                             <constraint firstAttribute="trailing" secondItem="UgY-K4-5n8" secondAttribute="trailing" id="wDs-sl-2Ik"/>
                             <constraint firstItem="Ghe-WW-AUa" firstAttribute="top" secondItem="LSb-Hx-7Ia" secondAttribute="bottom" constant="8" id="yPD-Ou-dmo"/>
+                            <constraint firstItem="dVf-6y-WCl" firstAttribute="bottom" secondItem="LSb-Hx-7Ia" secondAttribute="bottom" constant="-10" id="yVX-JW-22Z"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -127,12 +155,14 @@
     <resources>
         <image name="heart" width="21.333333969116211" height="21.333333969116211"/>
         <image name="location_icon" width="12" height="15.666666984558105"/>
-        <image name="man" width="208.66667175292969" height="194.33332824707031"/>
         <namedColor name="LabelDarkBlueColor">
             <color red="0.067000001668930054" green="0.16099999845027924" blue="0.31000000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="LabelGrayTextColor">
             <color red="0.56499999761581421" green="0.56499999761581421" blue="0.56499999761581421" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="RedThemeColor">
+            <color red="0.96100002527236938" green="0.35699999332427979" blue="0.33300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="TextFieldBgColor">
             <color red="0.96100002527236938" green="0.96100002527236938" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
